--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,28 +4,17 @@
 
 <header>
 	<nav>
-	  <a href="https://www.netlify.com/">
-		<img
-		  src="https://example-styles.netlify.app/images/logo-netlify-small-monochrome-darkmode.svg"
-		  alt="Netlify"
-		  class="nf-logo"
-		/>
+	  <a href="https://frostmute-astro.netlify.app/">
+		Jonathan J Wagner
 	  </a>
 	  <ul>
 		<li><a href="/">Home</a></li>
-		<li>
-		  <a href="https://github.com/netlify/examples" target="_blank">
-			Examples
-		  </a>
-		</li>
-		<li>
-		  <a href="https://docs.netlify.com/" target="_blank">Documentation</a>
-		</li>
+
 	  </ul>
 	</nav>
 	<section>
-        <h1>Using Astro with Netlify Visual Editor</h1>
-        <p>A simpe example site <a href="https://developers.netlify.com/guides/add-visual-editor-to-astro-website/">to accompany this guide</a>.</p>
+        <h1>A Collection of Things and Stuff</h1>
+        <p>Yada Yada Yada</p>
       </section>
   </header>
   <hr>
